# diagram-skills

./: .gitattributes  .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
diagram_studio/: __init__.py  cli.py  exporters.py  icons.py  renderer.py  specs.py  styles.py
examples/: agent_memory_bridge.json  api_request_flow.json  ecommerce_architecture.json  incident_response.json
references/: DIAGRAM.md  QUALITY_GATES.md  REFERENCE_GAP.md  ROUTE_COMPARISON.md  ROUTING_FIRST.md
scripts/: render_examples.sh
tests/: test_diagram_studio.py
