[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagram-studio"
version = "0.2.0"
description = "Polished software diagram skill starter with style families and screenshot-friendly exports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
png = ["cairosvg>=2.7"]
dev = ["pytest>=8.0"]

[project.scripts]
diagram-studio = "diagram_studio.cli:main"

[tool.setuptools.packages.find]
include = ["diagram_studio*"]
