[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagram-studio"
version = "0.2.1"
description = "Polished software diagram skill starter with style families and screenshot-friendly exports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
png = ["cairosvg>=2.7"]
dev = ["build>=1.2", "pytest>=8.0"]

[project.scripts]
diagram-studio = "diagram_studio.cli:main"

# The installable Python package is intentionally runtime-only.
# Skill docs, examples, references, and assets remain repository materials for source checkouts and GitHub releases.
[tool.setuptools.packages.find]
include = ["diagram_studio*"]
